--- a/requirements.txt
+++ b/requirements.txt
@@ -61,5 +61,9 @@ xmltodict==0.12.0         # via moto
 zipp==3.1.0               # via importlib-metadata
 zope.interface==4.6.0     # via datetime
 
+git+https://github.com/fabric8-analytics/fabric8-analytics-worker.git@58d3025
+git+https://github.com/fabric8-analytics/fabric8-analytics-utils.git@3bca34e
+git+https://github.com/fabric8-analytics/fabric8-analytics-version-comparator.git#egg=f8a_version_comparator
+
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
