--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,10 @@
+requests
+Werkzeug
 psycopg2-binary
-datetime
-boto3
-codecov
-requests-futures
+botocore<=1.15.35
 freezegun
-moto
+responses
+boto3<=1.12.35
+moto<=1.3.14
+boto<=2.49.0
+f8a_utils @ git+https://github.com/fabric8-analytics/fabric8-analytics-utils.git@44c123b#egg=f8a_utils
