--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -4,18 +4,23 @@
 #
 #    pip-compile
 #
-attrs==19.3.0             # via pytest
-coverage==5.2.1           # via pytest-cov
-importlib-metadata==1.7.0  # via pluggy, pytest
+attrs==20.2.0             # via pytest
+certifi==2020.6.20        # via requests
+chardet==3.0.4            # via requests
+codecov==2.1.9            # via -r requirements.in
+coverage==5.3             # via codecov, pytest-cov
+idna==2.10                # via requests
+importlib-metadata==2.0.0  # via pluggy, pytest
 iniconfig==1.0.1          # via pytest
-more-itertools==8.4.0     # via pytest
 packaging==20.4           # via pytest
 pluggy==0.13.1            # via pytest
 py==1.9.0                 # via pytest
 pyparsing==2.4.7          # via packaging
 pytest-cov==2.10.1        # via -r requirements.in
-pytest==6.0.1             # via -r requirements.in, pytest-cov
+pytest==6.1.0             # via -r requirements.in, pytest-cov
+requests==2.24.0          # via codecov
 six==1.15.0               # via packaging
 tests==0.7                # via -r requirements.in
 toml==0.10.1              # via pytest
-zipp==3.1.0               # via importlib-metadata
+urllib3==1.25.10          # via requests
+zipp==3.2.0               # via importlib-metadata
